# juniqterm

./: LICENSE  README.ko.md  README.md  i.sh  install-ubuntu.sh  install.sh  nextstep.md  package-ubuntu-deb.sh
docs/: ubuntu.md
growterm-app/: Cargo.toml
growterm-app/src/: app.rs  config.rs  copy_mode.rs  ink_workaround.rs  lib.rs  main.rs  platform.rs  pomodoro.rs  search_mode.rs  selection.rs  tab.rs  url.rs
growterm-gpu-draw/: Cargo.toml
growterm-gpu-draw/examples/: hardcoded_grid.rs  integration_render_cmd.rs  integration_vt_parser.rs
growterm-gpu-draw/src/: atlas.rs  lib.rs  renderer.rs
growterm-grid/src/: grid_tests.rs  lib.rs
growterm-input/src/: lib.rs
growterm-integration-tests/src/: lib.rs
growterm-integration-tests/tests/: claude_code_app_launch.rs  claude_code_ime_trace.rs  diagonal_line_check.rs  hangul_jamo_input.rs  xterm_conformance.rs
growterm-linux/: Cargo.toml
growterm-linux/src/: event.rs  key_convert.rs  lib.rs  window.rs
growterm-macos/src/: delegate.rs  dispatch.rs  event.rs  key_convert.rs  lib.rs  view.rs  window.rs
growterm-macos/tests/: cmd_v_paste_event.rs
growterm-render-cmd/src/: lib.rs
growterm-types/src/: lib.rs
growterm-vt-parser/src/: lib.rs
